@@ -5,6 +5,7 @@ examples/create_and_print_value_monolingual.pl
 examples/create_and_print_value_property.pl
 examples/create_and_print_value_quantity.pl
 examples/create_and_print_value_quantity_translated.pl
+examples/create_and_print_value_string.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
