@@ -61,7 +61,7 @@ SEE ALSO
         Wikibase quantity value pretty print helpers.
 
     Wikibase::Datatype::Print::Value::String
-        TODO
+        Wikibase string value pretty print helpers.
 
     Wikibase::Datatype::Print::Value::Time
         TODO
